--- a/header.html
+++ b/header.html
@@ -12,3 +12,4 @@
 		<iframe src="https://ghbtns.com/github-btn.html?user=bjfletcher&repo=tech-signs&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 		<p>Raise <a href="https://github.com/bjfletcher/tech-signs/issues">an issue</a> if you see a tech sign missing</p>
 	</div>
+	<input type="text" class="filter-box" placeholder="Search for sign..."/>
